<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_counter"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.counter.CounterBasedMvpFragment">

    <TextView
        android:id="@+id/one_counter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one_counter_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/default_text_counter" />

    <TextView
        android:id="@+id/two_counter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two_counter_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/default_text_counter" />

    <TextView
        android:id="@+id/three_counter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three_counter_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/default_text_counter" />

</LinearLayout>


