<resources>
    <string name="app_name">Популярные Библиотеки</string>

    <!-- default value-->
    <string name="default_text_counter">0</string>

    <!-- bottom nav menu -->
    <string name="starting">Стартовый</string>
    <string name="settings">Настройки</string>

    <!-- О приложении -->
    <string name="about_app">О приложении</string>
    <string name="personalization_app">Персонализация</string>
    <string name="cod_version">Код версии:</string>
    <string name="version">Версия:</string>
    <string name="about_app_text">О Приложении\n\nПриложение является результатом выполнения
        практических заданий по освоению разработки Android приложений.\nКурс - Популярные
        библиотеки: RxJava 2, Dagger 2, Moxy (февраль 2023 года)</string>

    <!--Кнопки -->
    <string name="counter_mvp">Cчетчик на MVP</string>
    <string name="blanks">Ничего нет</string>
    <string name="users_git_hub">Users GitHub</string>
    <string name="convertor_image">Конвертация картинок</string>
    <string name="open_image">Открыть</string>
    <string name="convertor_save_image">Конвертировать</string>

    <!-- name text view -->
    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>

    <!-- Для экрана  -->
    <string name="search">Поиск</string>
    <string name="results">Number</string>


</resources>