<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_starting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.root.StartingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/counter_mvp_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter_mvp"
            android:textSize="@dimen/default_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/users_git_hub_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/users_git_hub"
            android:textSize="@dimen/default_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convertor_image_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/convertor_image"
            android:textSize="@dimen/default_text" />
    </LinearLayout>

</FrameLayout>