<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/linear_layout_container"
    android:orientation="vertical"
    tools:context=".ui.root.RootActivity">

    <FrameLayout
        android:id="@+id/fragment_container_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bnv_default"
        android:visibility="visible"
        app:itemIconTint="@color/item_icon_tint"
        app:itemTextColor="@color/item_text"
        app:labelVisibilityMode="selected"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>